[metadata]
name = opensmile
author = Johannes Wagner, Christoph Hausner, Hagen Wierstorf
author-email = jwagner@audeering.com, chausner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/opensmile-python/
project-urls =
    Documentation = https://audeering.github.io/opensmile-python/
description = Python wrapper for common openSMILE feature sets
long-description = file: README.rst
license = audEERING
license-file = LICENSE
keywords = audio, tools, feature, opensmile, audeering
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audinterface >=0.6.5,<0.8.0
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=opensmile
    --cov-fail-under=100
    --cov-report term-missing
    --cov-report xml
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401 F403  # ignore unused and * imports
