[metadata]
name = opensmile
author = Johannes Wagner, Christoph Hausner, Hagen Wierstorf
author_email = jwagner@audeering.com, chausner@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/opensmile-python/
project_urls =
    Documentation = https://audeering.github.io/opensmile-python/
description = Python wrapper for common openSMILE feature sets
long_description = file: README.rst
license = audEERING
license_file = LICENSE
keywords = audio, tools, feature, opensmile, audeering
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audobject >=0.6.1
    audinterface >=0.7.0
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=opensmile
    --cov-fail-under=100
    --cov-report term-missing
    --cov-report xml
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused and * imports
    __init__.py: F401, F403,
